# parachain

./: .gitignore  Cargo.toml  README.md  TODO.md  llm-context.md
.github/tests/: zombienet-smoke-test.zndsl
.github/workflows/: ci.yml  release.yml  test-zombienet.yml
docs/: AMM-Adapter-Usage-Guide.md  AssetKind-Implementation-Guide.md  Blockchain-Performance-Best-Practices.md  DEX-Integration-Insights.md  DEX-Router-Architecture.md  Polkadot-SDK-2503-Insights.md  Production-Deployment-Guide.md
pallets/dex-router/: Cargo.toml  README.md
pallets/dex-router/src/: adapters.rs  adapters_extended.rs  lib.rs  tests.rs  traits.rs
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml  README.md
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: assets_config.rs  dex_router_config.rs  mod.rs  xcm_config.rs
runtime/src/tests/: dex_integration_tests.rs  dex_router_integration_tests.rs  mod.rs
scripts/: download-omni-node.sh  test-ci-local.sh  test-release-local.sh  test-zombienet-local.sh
